Plantillas del nav hechos, herencia plantillas Vid-31

--- a/ProyectoWebApp/templates/ProyectoWebApp/blog.html
+++ b/ProyectoWebApp/templates/ProyectoWebApp/blog.html
@@ -1,7 +1,12 @@
-<html>
+<!-- Heredamos de la plantilla base -->
 
-<body>
-    Blog
-</body>
+{% extends 'ProyectoWebApp/base.html' %}
 
-</html>
+{% load static %}
+
+
+{% block content %}
+
+<p>Blog</p>
+
+{% endblock %}
