--- a/ProyectoWebApp/templates/ProyectoWebApp/servicios.html
+++ b/ProyectoWebApp/templates/ProyectoWebApp/servicios.html
@@ -1,7 +1,12 @@
-<html>
+<!-- Heredamos de la plantilla base -->
 
-<body>
-    Servicios
-</body>
+{% extends 'ProyectoWebApp/base.html' %}
 
-</html>
+{% load static %}
+
+
+{% block content %}
+
+<p>Servicios</p>
+
+{% endblock %}
