--- a/ProyectoWebApp/templates/ProyectoWebApp/tienda.html
+++ b/ProyectoWebApp/templates/ProyectoWebApp/tienda.html
@@ -1,7 +1,13 @@
-<html>
+<!-- Heredamos de la plantilla base -->
 
-<body>
-    Tienda
-</body>
+{% extends 'ProyectoWebApp/base.html' %}
 
-</html>
+{% load static %}
+
+
+{% block content %}
+
+<p>Tienda
+</p>
+
+{% endblock %}
